--- a/css/index.css
+++ b/css/index.css
@@ -13,6 +13,7 @@ body {
 
 body {
     padding-top: 50px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    text-align: center;
 }
 
 .img-portfolio {
@@ -71,6 +72,10 @@ header.carousel .fill {
 
 footer {
     margin: 50px 0;
+}
+
+.produkt{
+  margin-bottom: 30px;
 }
 
 /* Responsive Styles */
